--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "jquery": "^2.1.4",
     "lodash": "^3.10.0",
     "nib": "^1.1.0",
-    "react": "^0.13.3",
+    "react": "^0.14.7",
     "react-d3": "^0.4.0",
+    "react-dom": "^0.14.7",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
     "reflux": "^0.3.0",
@@ -32,5 +33,3 @@
     "whatwg-fetch": "^0.11.0"
   }
 }
-
-
