--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^3.10.0",
     "nib": "^1.1.0",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^0.14.7",
     "react-d3": "^0.4.0",
     "react-dom": "^0.14.7",
     "react-router": "^0.13.3",
